--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href="/Landing_Page/styles.css" rel="stylesheet">
     </head>
     <body>
         <h1>Landing Page</h1>
         <a href="/Minecraft_Blocks">Minecraft Blocks</a>
+        <a href="/Block_Raise">Block Raise</a>
+        <a href="Mine_Sweeper_Nav">Mine Sweeper Nav</a>
     </body>
 </html>
