--- a/public/Mine_Sweeper_Nav/index.html
+++ b/public/Mine_Sweeper_Nav/index.html
@@ -5,6 +5,16 @@
         <script defer src="./script.js"></script>
     </head>
     <body>
-        <div id="flex_box"></div>
+        <div id="game_flex">
+            <div id="counter_bar">
+                <h1 id="counter_value"><span>019</span></h1>
+            </div>
+            <div id="grid"></div>
+            <div id="flag_box">
+                <div id="flag_toggle" onclick="toggleFlag()">
+                    <div id="toggle_circle"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
