Win mechanics complete

--- a/public/Mine_Sweeper_Nav/index.html
+++ b/public/Mine_Sweeper_Nav/index.html
@@ -5,16 +5,25 @@
         <script defer src="./script.js"></script>
     </head>
     <body>
+        <div id="play_again">
+            <h2 id="you_win">You Win!</h2>
+            <button class="end_button" onclick="playAgain()">Play Again</button>
+            <button class="end_button" onclick="goHome()">Go Home</button>
+        </div>
         <div id="game_flex">
+
             <div id="counter_bar">
-                <h1 id="counter_value"><span>019</span></h1>
+                <h1 id="counter_value"></h1>
             </div>
+
             <div id="grid"></div>
+
             <div id="flag_box">
                 <div id="flag_toggle" onclick="toggleFlag()">
                     <div id="toggle_circle"></div>
                 </div>
             </div>
+
         </div>
     </body>
 </html>
