--- a/public/Mine_Sweeper_Nav/index.html
+++ b/public/Mine_Sweeper_Nav/index.html
@@ -13,7 +13,9 @@
         <div id="game_flex">
 
             <div id="counter_bar">
+                <button class="color_mode" onclick="applyPreset1()">Light Mode</button>
                 <h1 id="counter_value"></h1>
+                <button class="color_mode" onclick="applyPreset2()">Dark Mode</button>
             </div>
 
             <div id="grid"></div>
