--- a/public/Mine_Sweeper_Nav/index.html
+++ b/public/Mine_Sweeper_Nav/index.html
@@ -21,6 +21,7 @@
             <div id="grid"></div>
 
             <div id="flag_box">
+                <div id="flag_icon"></div>
                 <div id="flag_toggle" onclick="toggleFlag()">
                     <div id="toggle_circle"></div>
                 </div>
