--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -7,6 +7,7 @@
         <h1>Landing Page</h1>
         <a href="/Minecraft_Blocks">Minecraft Blocks</a>
         <a href="/Block_Raise">Block Raise</a>
-        <a href="Mine_Sweeper_Nav">Mine Sweeper Nav</a>
+        <a href="/Mine_Sweeper_Nav">Mine Sweeper Nav</a>
+        <a href="/Contact_Page">Contact Me</a>
     </body>
 </html>
