--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -4,10 +4,14 @@
         <link href="/Landing_Page/styles.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Landing Page</h1>
-        <a href="/Minecraft_Blocks">Minecraft Blocks</a>
-        <a href="/Block_Raise">Block Raise</a>
-        <a href="/Mine_Sweeper_Nav">Mine Sweeper Nav</a>
-        <a href="/Contact_Page">Contact Me</a>
+        <h1 id="page_heading">Welcome!</h1>
+        <div id="project_box">
+            <div class="project"><a href="/Minecraft_Blocks">Minecraft Blocks</a></div>
+            <div class="project"><a href="/Block_Raise">Block Raise</a></div>
+            <div class="project"><a href="/Mine_Sweeper_Nav">Minesweeper</a></div>
+            <div class="project"><a href="/Responsive_Mobile">Responsive Website</a></div>
+            <div class="project"><a href="/Hexagon_Grid">Hexagon Grid</a></div>
+            <div class="project"><a href="/Contact_Page">Contact Me</a></div>
+        </div>
     </body>
 </html>
