Hexagons and Bubbles

--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -6,12 +6,13 @@
     <body>
         <h1 id="page_heading">Welcome!</h1>
         <div id="project_box">
-            <div class="project"><a href="/Minecraft_Blocks">Minecraft Blocks</a></div>
-            <div class="project"><a href="/Block_Raise">Block Raise</a></div>
-            <div class="project"><a href="/Mine_Sweeper_Nav">Minesweeper</a></div>
-            <div class="project"><a href="/Responsive_Mobile">Responsive Website</a></div>
-            <div class="project"><a href="/Hexagon_Grid">Hexagon Grid</a></div>
-            <div class="project"><a href="/Contact_Page">Contact Me</a></div>
+            <a href="/Minecraft_Blocks"><div class="project">Minecraft Blocks</div></a>
+            <a href="/Block_Raise"><div class="project">Block Raise</div></a>
+            <a href="/Mine_Sweeper_Nav"><div class="project">Minesweeper</div></a>
+            <a href="/Responsive_Mobile"><div class="project">Responsive Website</div></a>
+            <a href="/Hexagon_Grid"><div class="project">Hexagon Grid</div></a>
+            <a href="/Bubble"><div class="project">Bubble Background</div></a>
+            <a href="/Contact_Page"><div class="project">Contact Me</div></a>
         </div>
     </body>
 </html>
