Made random pixel generator (again)

--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -12,6 +12,7 @@
             <a href="/Responsive_Mobile"><div class="project">Responsive Website</div></a>
             <a href="/Hexagon_Grid"><div class="project">Hexagon Grid</div></a>
             <a href="/Bubble"><div class="project">Bubble Background</div></a>
+            <a href="/Babel"><div class="project">Babel Image Generator</div></a>
             <a href="/Contact_Page"><div class="project">Contact Me</div></a>
         </div>
     </body>
