--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -13,6 +13,7 @@
             <a href="/Hexagon_Grid"><div class="project">Hexagon Grid</div></a>
             <a href="/Bubble"><div class="project">Bubble Background</div></a>
             <a href="/Babel"><div class="project">Babel Image Generator</div></a>
+            <a href="/Firework_Click"><div class="project">Firework Click</div></a>
             <a href="/Contact_Page"><div class="project">Contact Me</div></a>
         </div>
     </body>
