Finished animated underline

--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -15,6 +15,7 @@
             <a href="/Babel"><div class="project">Babel Image Generator</div></a>
             <a href="/Firework_Click"><div class="project">Firework Click</div></a>
             <a href="/Moving_Color_Background"><div class="project">Moving Color Background</div></a>
+            <a href="/Animated_Underline"><div class="project">Animated Underline</div></a>
             <a href="/Contact_Page"><div class="project">Contact Me</div></a>
         </div>
     </body>
