Eyes follow you

--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -16,6 +16,8 @@
             <a href="/Firework_Click"><div class="project">Firework Click</div></a>
             <a href="/Moving_Color_Background"><div class="project">Moving Color Background</div></a>
             <a href="/Animated_Underline"><div class="project">Animated Underline</div></a>
+            <a href="/Drum_Game_Clone"><div class="project">Drum Game Clone</div></a>
+            <a href="/Following_Eyes"><div class="project">Following Eyes</div></a>
             <a href="/Contact_Page"><div class="project">Contact Me</div></a>
         </div>
     </body>
