Added browser tab titles to pages

--- a/public/Hexagon_Grid/index.html
+++ b/public/Hexagon_Grid/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Hexagon Grid</title>
         <link href="styles.css" rel="stylesheet" />
         <script src="script.js" defer></script>
     </head>
