--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Nole's Website</title>
         <link href="/Landing_Page/styles.css" rel="stylesheet">
     </head>
     <body>
