--- a/public/Mine_Sweeper_Nav/index.html
+++ b/public/Mine_Sweeper_Nav/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Minesweeper</title>
         <link href="styles.css" rel="stylesheet">
         <script defer src="./script.js"></script>
     </head>
