--- a/public/Animated_Underline/index.html
+++ b/public/Animated_Underline/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Animated Underline</title>
         <link href="./styles.css" rel="stylesheet" />
         <link href="./prism.css" rel="stylesheet" />
         <script src="./script.js" defer></script>
