--- a/public/Babel/index.html
+++ b/public/Babel/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Babel Image Generator</title>
         <link href="styles.css" rel="stylesheet" />
         <script src="script.js" defer></script>
     </head>
