--- a/public/Bubble/index.html
+++ b/public/Bubble/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Bubbles!</title>
         <link href="styles.css" rel="stylesheet" />
         <script src="bubble.js" defer></script>
 
