--- a/public/Drum_Game_Clone/index.html
+++ b/public/Drum_Game_Clone/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Drum Game Clone</title>
         <link href="./styles.css" rel="stylesheet" />
         <script src="./script.js" defer></script>
     </head>
