--- a/public/Firework_Click/index.html
+++ b/public/Firework_Click/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Firework Click</title>
         <link href="styles.css" rel="stylesheet" />
         <script src="script.js"></script>
     </head>
