--- a/public/Minecraft_Blocks/index.html
+++ b/public/Minecraft_Blocks/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Minecraft Blocks</title>
         <link href="styles.css" rel="stylesheet">
         <link href="sidePanel.css" rel="stylesheet">
         <script src="./script.js"></script>
