--- a/public/Moving_Color_Background/index.html
+++ b/public/Moving_Color_Background/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Moving Color Background</title>
         <link href="styles.css" rel="stylesheet" />
         <script src="./script.js" defer></script>
     </head>
