--- a/public/Responsive_Mobile/index.html
+++ b/public/Responsive_Mobile/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Responsive Mobile</title>
         <link href="styles.css" rel="stylesheet" />
     </head>
     <body>
