--- a/public/_template_files/index.html
+++ b/public/_template_files/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Template</title>
         <link href="./styles.css" rel="stylesheet" />
         <script src="./script.js" defer></script>
     </head>
