--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -20,6 +20,7 @@
             <a href="/Drum_Game_Clone"><div class="project">Drum Game Clone</div></a>
             <a href="/Following_Eyes"><div class="project">Following Eyes</div></a>
             <a href="/Waveform_Effects"><div class="project">Waveform Effects</div></a>
+            <a href="/MongoDB_Demo"><div class="project">MongoDB Demo</div></a>
             <a href="/Contact_Page"><div class="project">Contact Me</div></a>
         </div>
     </body>
