--- a/public/MongoDB_Demo/index.html
+++ b/public/MongoDB_Demo/index.html
@@ -6,27 +6,61 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
-        <!-- Get all -->
-        <form method="GET" action="/myRoute">
-            <button type="submit">Fetch All</button>
-        </form>
+        <div id="page">
+            <div id="page_header_section">
+                <h1>MongoDB Demo</h1>
+            </div>
+            <div id="search_and_results_box">
+                <div id="search_panel">
+                    <!-- General search -->
+                    <form id="searchForm">
+                        <div class="form_section">
+                            <label for="fname">First Name:</label><br>
+                            <input type="text" id="fname" name="fname">
+                        </div>
+                        <div class="form_section">
+                            <label for="lname">Last Name:</label><br>
+                            <input type="text" id="lname" name="lname"><br>
+                        </div>
+                        <div class="form_section">
+                            <label for="department_section">Departments</label>
+                            <fieldset id="department_section">
+                                <input type="radio" id="no_filter" name="department" value="no_filter" checked>
+                                <label for="no_filter" class="radio_label">No Filter</label><br>
+                                <input type="radio" id="customer_service" name="department" value="Customer Service">
+                                <label for="customer_service" class="radio_label">Customer Service</label><br>
+                                <input type="radio" id="human_resources" name="department" value="Human Resources">
+                                <label for="human_resources" class="radio_label">Human Resources</label><br>
+                                <input type="radio" id="IT" name="department" value="IT">
+                                <label for="IT" class="radio_label">IT</label><br>
+                                <input type="radio" id="marketing" name="department" value="Marketing">
+                                <label for="marketing" class="radio_label">Marketing</label><br>
+                                <input type="radio" id="sales" name="department" value="Sales">
+                                <label for="sales" class="radio_label">Sales</label><br>
+                            </fieldset>
+                        </div>
+                        <div class="form_section">
+                            <label for="salary">Salary:</label><br>
+                            <input type="number" id="salary" name="salary"><br>
+                        </div>
+                        <div id="submit_btn_box">
+                            <button type="submit">Search</button>
+                        </div>
+                    </form>
+                </div>
 
-        <!-- Get one -->
-        <form id="getOneForm">
-            <label for="id">Tester ID: </label><br>
-            <input type="text" id="id" name="id"><br>
-            <button type="submit">Fetch One</button>
-        </form>
-
-        <!-- Create one -->
-        <form id="createTesterForm">
-            <label for="name">Name: </label><br>
-            <input type="text" id="name" name="name" /><br>
-            <label for="favoriteFruit">Favorite Fruit: </label><br>
-            <input type="text" id="favoriteFruit" name="favoriteFruit" /><br>
-            <button type="submit">Create Tester</button>
-        </form>
-
-        <p id="output_box"></p>
+                <div id="results_section">
+                    <div class="result"></div>
+                    <div class="result"></div>
+                    <div class="result"></div>
+                    <div class="result"></div>
+                    <div class="result"></div>
+                    <div class="result"></div>
+                    <div class="result"></div>
+                    <div class="result"></div>
+                    <div class="result"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
