Can create employee

--- a/public/MongoDB_Demo/index.html
+++ b/public/MongoDB_Demo/index.html
@@ -11,6 +11,41 @@
                 <h1>MongoDB Demo</h1>
             </div>
             <div id="search_and_results_box">
+                <div id="popup_create_panel">
+                    <form id="create_form">
+                        <div class="form_section">
+                            <label for="fname">First Name:</label><br>
+                            <input type="text" id="c_fname" name="fname" required>
+                        </div>
+                        <div class="form_section">
+                            <label for="lname">Last Name:</label><br>
+                            <input type="text" id="c_lname" name="lname" required><br>
+                        </div>
+                        <div class="form_section">
+                            <label for="department_section">Departments</label>
+                            <fieldset id="department_section">
+                                <input type="radio" id="customer_service" name="c_department" value="Customer Service" checked>
+                                <label for="customer_service" class="radio_label">Customer Service</label><br>
+                                <input type="radio" id="human_resources" name="c_department" value="Human Resources">
+                                <label for="human_resources" class="radio_label">Human Resources</label><br>
+                                <input type="radio" id="IT" name="c_department" value="IT">
+                                <label for="IT" class="radio_label">IT</label><br>
+                                <input type="radio" id="marketing" name="c_department" value="Marketing">
+                                <label for="marketing" class="radio_label">Marketing</label><br>
+                                <input type="radio" id="sales" name="c_department" value="Sales">
+                                <label for="sales" class="radio_label">Sales</label><br>
+                            </fieldset>
+                        </div>
+                        <div class="form_section">
+                            <label for="salary">Salary:</label><br>
+                            <input type="number" id="c_salary" name="salary" required><br>
+                        </div>
+                        <div id="submit_btn_box">
+                            <div id="cancel_create_btn" class="submit_btn">Cancel</div>
+                            <button id="create_btn" class="submit_btn" type="submit">Create</button>
+                        </div>
+                    </form>
+                </div>
                 <div id="search_panel">
                     <form id="searchForm">
                         <div class="form_section">
@@ -43,9 +78,11 @@
                             <input type="number" id="salary" name="salary"><br>
                         </div>
                         <div id="submit_btn_box">
-                            <button type="submit">Search</button>
+                            <button id="search_btn" class="submit_btn" type="submit">Search</button>
                         </div>
                     </form>
+
+                    <div id="create_employee_btn">Create Employee</div>
                 </div>
 
                 <div id="results_section">
