--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -8,19 +8,17 @@
         <h1 id="page_heading">Welcome!</h1>
         <div id="project_box">
             <a href="/Minecraft_Blocks"><div class="project">Minecraft Blocks</div></a>
-            <a href="/Block_Raise"><div class="project">Block Raise</div></a>
             <a href="/Mine_Sweeper_Nav"><div class="project">Minesweeper</div></a>
-            <a href="/Responsive_Mobile"><div class="project">Responsive Website</div></a>
             <a href="/Hexagon_Grid"><div class="project">Hexagon Grid</div></a>
             <a href="/Bubble"><div class="project">Bubble Background</div></a>
             <a href="/Babel"><div class="project">Babel Image Generator</div></a>
             <a href="/Firework_Click"><div class="project">Firework Click</div></a>
             <a href="/Moving_Color_Background"><div class="project">Moving Color Background</div></a>
             <a href="/Animated_Underline"><div class="project">Animated Underline</div></a>
-            <a href="/Drum_Game_Clone"><div class="project">Drum Game Clone</div></a>
             <a href="/Following_Eyes"><div class="project">Following Eyes</div></a>
             <a href="/Waveform_Effects"><div class="project">Waveform Effects</div></a>
             <a href="/MongoDB_Demo"><div class="project">MongoDB Demo</div></a>
+            <a href="/Clock"><div class="project">Clock</div></a>
             <a href="/Contact_Page"><div class="project">Contact Me</div></a>
         </div>
     </body>
