Clock display rotates

--- a/public/Clock/index.html
+++ b/public/Clock/index.html
@@ -6,6 +6,9 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
-
+        <div id="page">
+            <div id="clock_box"></div>
+            <button onclick="temp()">Change</button>
+        </div>
     </body>
 </html>
