--- a/public/Clock/index.html
+++ b/public/Clock/index.html
@@ -6,6 +6,7 @@
         <script src="./script.js" defer></script>
     </head>
     <body>
+        <div id="mode_btn"><img id="mode_icon" src="assets/sun.svg"></div>
         <div id="page">
             <div id="clock_box"></div>
         </div>
