Added create edge button

--- a/public/Graph_Creator/index.html
+++ b/public/Graph_Creator/index.html
@@ -13,11 +13,12 @@
                 </div>
                 <h1 id="side_panel_heading">Graph Creator</h1>
                 <div id="btn_box">
-                    <div id="create_node_btn"><span>+</span></div>
+                    <div id="create_node_btn" class="ctrl_btn">+</div>
+                    <div id="create_edge_btn" class="ctrl_btn">Add Edges</div>
                 </div>
             </div>
             <div id="preview_section">
-
+                <canvas id="edge_canvas"></canvas>
             </div>
         </div>
     </body>
