--- a/public/Graph_Creator/index.html
+++ b/public/Graph_Creator/index.html
@@ -15,6 +15,7 @@
                 <div id="btn_box">
                     <div id="create_node_btn" class="ctrl_btn">+</div>
                     <div id="create_edge_btn" class="ctrl_btn">Add Edges</div>
+                    <button onclick="rotate()">Rotate</button>
                 </div>
             </div>
             <div id="preview_section">
