--- a/public/Graph_Creator/index.html
+++ b/public/Graph_Creator/index.html
@@ -9,7 +9,7 @@
         <div id="page">
             <div id="side_panel">
                 <div id="side_panel_mask">
-                    <h2 id="esc_to_cancel">"ESC" to cancel</h2>
+                    <h2 id="mask_text">"ESC" to cancel</h2>
                 </div>
                 <h1 id="side_panel_heading">Graph Creator</h1>
                 <div id="btn_box">
