Optimized flexible edges

--- a/public/Graph_Creator/index.html
+++ b/public/Graph_Creator/index.html
@@ -16,6 +16,10 @@
                     <div id="create_node_btn" class="ctrl_btn">+</div>
                     <div id="create_edge_btn" class="ctrl_btn">Add Edges</div>
                 </div>
+                <div id="node_info_section">
+                    <label for="label_input">Label:</label>
+                    <input type="text" id="label_input">
+                </div>
             </div>
             <div id="preview_section">
                 <canvas id="edge_canvas"></canvas>
