Nodes stay in bounds of box

--- a/public/Graph_Creator/index.html
+++ b/public/Graph_Creator/index.html
@@ -14,7 +14,8 @@
                 <h1 id="side_panel_heading">Graph Creator</h1>
                 <div id="btn_box">
                     <div id="create_node_btn" class="ctrl_btn">+</div>
-                    <div id="create_edge_btn" class="ctrl_btn">Add Edges</div>
+                    <div id="delete_node_btn" class="ctrl_btn">-</div>
+                    <div id="create_edge_btn" class="ctrl_btn">Edit Edges</div>
                 </div>
                 <div id="node_info_section">
                     <label for="label_input">Label:</label>
