Matrix add and delete nodes

--- a/public/Graph_Creator/index.html
+++ b/public/Graph_Creator/index.html
@@ -21,6 +21,10 @@
                     <label for="label_input">Label:</label>
                     <input type="text" id="label_input">
                 </div>
+                <!-- The rest of the matrix is created dynamically with JS -->
+                <table id="adj_matrix">
+                    <tr id="matrix_top_labels" class="matrix_row"><th></th></tr>
+                </table>
             </div>
             <div id="preview_section">
                 <canvas id="edge_canvas"></canvas>
