Can toggle between graph modes

--- a/public/Graph_Creator/index.html
+++ b/public/Graph_Creator/index.html
@@ -25,9 +25,25 @@
                 <table id="adj_matrix">
                     <tr id="matrix_top_labels" class="matrix_row"><th></th></tr>
                 </table>
+                <fieldset id="graph_type_fieldset">
+                    <legend>Choose your graph type</legend>
+                    <input type="radio" id="radio_undirected" name="graph_type_radio" value="undirected" checked>
+                    <label for="radio_undirected">Undirected</label><br>
+                    <input type="radio" id="radio_directed" name="graph_type_radio" value="directed">
+                    <label for="radio_directed">Directed</label>
+                </fieldset>
             </div>
             <div id="preview_section">
                 <canvas id="edge_canvas"></canvas>
+            </div>
+            <div id="prompt_section">
+                <div id="prompt_box">
+                    <p id="prompt_message"></p>
+                    <div id="prompt_button_box">
+                        <button class="prompt_btn">Yes</button>
+                        <button class="prompt_btn">No</button>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
