--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -17,9 +17,11 @@
             <a href="/Animated_Underline"><div class="project">Animated Underline</div></a>
             <a href="/Following_Eyes"><div class="project">Following Eyes</div></a>
             <a href="/Waveform_Effects"><div class="project">Waveform Effects</div></a>
-            <a href="/MongoDB_Demo"><div class="project">MongoDB Demo</div></a>
             <a href="/Clock"><div class="project">Clock</div></a>
-            <a href="/Contact_Page"><div class="project">Contact Me</div></a>
+
+            <!-- NO LONGER FUNCTIONAL -->
+            <!-- <a href="/MongoDB_Demo"><div class="project">MongoDB Demo</div></a> -->
+            <!-- <a href="/Contact_Page"><div class="project">Contact Me</div></a> -->
         </div>
     </body>
 </html>
