--- a/public/Landing_Page/index.html
+++ b/public/Landing_Page/index.html
@@ -2,22 +2,22 @@
 <html>
     <head>
         <title>Nole's Website</title>
-        <link href="/public/Landing_Page/styles.css" rel="stylesheet" />
+        <link href="./styles.css" rel="stylesheet" />
     </head>
     <body>
         <h1 id="page_heading">Welcome!</h1>
         <div id="project_box">
-            <a href="/public/Minecraft_Blocks/index.html"><div class="project">Minecraft Blocks</div></a>
-            <a href="/public/Mine_Sweeper_Nav/index.html"><div class="project">Minesweeper</div></a>
-            <a href="/public/Hexagon_Grid/index.html"><div class="project">Hexagon Grid</div></a>
-            <a href="/public/Bubble/index.html"><div class="project">Bubble Background</div></a>
-            <a href="/public/Babel/index.html"><div class="project">Babel Image Generator</div></a>
-            <a href="/public/Firework_Click/index.html"><div class="project">Firework Click</div></a>
-            <a href="/public/Moving_Color_Background/index.html"><div class="project">Moving Color Background</div></a>
-            <a href="/public/Animated_Underline/index.html"><div class="project">Animated Underline</div></a>
-            <a href="/public/Following_Eyes/index.html"><div class="project">Following Eyes</div></a>
-            <a href="/public/Waveform_Effects/index.html"><div class="project">Waveform Effects</div></a>
-            <a href="/public/Clock/index.html"><div class="project">Clock</div></a>
+            <a href="../Minecraft_Blocks/index.html"><div class="project">Minecraft Blocks</div></a>
+            <a href="../Mine_Sweeper_Nav/index.html"><div class="project">Minesweeper</div></a>
+            <a href="../Hexagon_Grid/index.html"><div class="project">Hexagon Grid</div></a>
+            <a href="../Bubble/index.html"><div class="project">Bubble Background</div></a>
+            <a href="../Babel/index.html"><div class="project">Babel Image Generator</div></a>
+            <a href="../Firework_Click/index.html"><div class="project">Firework Click</div></a>
+            <a href="../Moving_Color_Background/index.html"><div class="project">Moving Color Background</div></a>
+            <a href="../Animated_Underline/index.html"><div class="project">Animated Underline</div></a>
+            <a href="../Following_Eyes/index.html"><div class="project">Following Eyes</div></a>
+            <a href="../Waveform_Effects/index.html"><div class="project">Waveform Effects</div></a>
+            <a href="../Clock/index.html"><div class="project">Clock</div></a>
 
             <!-- NO LONGER FUNCTIONAL -->
             <!-- <a href="/MongoDB_Demo"><div class="project">MongoDB Demo</div></a> -->
